<resources>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="title_name">Playlist maker</string>
    <string name="share">Поделиться приложением</string>
    <string name="help">Написать в поддержку</string>
    <string name="documents">Пользовательское соглашение</string>
    <string name="black_theme">Темная тема</string>
    <string name="android_course_url">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="subject_text">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text_to_developers">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="internet_problems">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="clear_history_button_text">Очистить историю</string>
    <string name="you_search">Вы искали</string>
    <string name="media_empty">Ваша медиатека пуста</string>
    <string name="playlist_empy">Вы не создали
        ни одного плейлиста</string>
    <string name="favotite_tracks">Избранные треки</string>
    <string name="playlsit">Плейлисты</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>

</resources>