<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    style="@style/SettingsBackground">


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        style="@style/SwitchStyle"
        app:thumbTint="@color/switch_thumb_selector"
        app:trackTint="@color/switch_track_selector"
        android:text="@string/black_theme" />

    <LinearLayout
        android:id="@+id/shareButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:clickable="true">
        <TextView
            android:text="@string/share"
            style="@style/TextStyleOptions" />
        <ImageView
            style="@style/ImageOptionsStyle"
            android:src="@drawable/share" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reportButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true">
        <TextView
            android:text="@string/help"
            style="@style/TextStyleOptions" />
        <ImageView
            style="@style/ImageOptionsStyle"
            android:src="@drawable/help" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/documentsId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:clickable="true">
        <TextView
            android:text="@string/documents"
            style="@style/TextStyleOptions" />
        <ImageView
            style="@style/ImageOptionsStyle"
            android:src="@drawable/arrow_right" />
    </LinearLayout>

</LinearLayout>
