<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/playlist_theme_color"
    tools:context="com.example.media.ui.playlist.CreatePlaylistFragment">

    <ImageView
        android:id="@+id/playlistBackButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/theme_color"
        android:clickable="true"
        android:src="@drawable/arrow_to_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/newPlaylistId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:fontFamily="@font/ys_text_medium"
        android:text="@string/new_playlist"
        android:textColor="@color/theme_color"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/playlistBackButton"
        app:layout_constraintStart_toEndOf="@id/playlistBackButton"
        app:layout_constraintTop_toTopOf="@id/playlistBackButton" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/playListImageContainerId"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/playlist_poster"
        android:clickable="true"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPlaylistId">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/previewId"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/vector"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </com.google.android.material.imageview.ShapeableImageView>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageId"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedImageView">
        </com.google.android.material.imageview.ShapeableImageView>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/playListNameId"
        style="@style/create_playlist_edit_text_styly"
        android:hint="@string/playlist_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playListImageContainerId">
    </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/descriptionId"
        style="@style/create_playlist_edit_text_styly"
        android:hint="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playListNameId">
    </com.google.android.material.textfield.TextInputEditText>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createButtonId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/playlist_save_button_selector"
        android:clickable="false"
        android:enabled="false"
        android:fontFamily="@font/ys_text_medium"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        app:layout_constraintStart_toStartOf="parent">
    </androidx.appcompat.widget.AppCompatButton>

</androidx.constraintlayout.widget.ConstraintLayout>


